--- a/templates/lynx/index.html.twig
+++ b/templates/lynx/index.html.twig
@@ -3,18 +3,7 @@
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+  <h1>Hello {{ controller_name }}! </h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'src/Controller/LynxController.php'|file_link(0) }}">src/Controller/LynxController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'templates/lynx/index.html.twig'|file_link(0) }}">templates/lynx/index.html.twig</a></code></li>
-    </ul>
-</div>
 {% endblock %}
