--- a/templates/lynx/base.html.twig
+++ b/templates/lynx/base.html.twig
@@ -10,8 +10,14 @@
       <link href="{{ asset('css/lynx.css') }}" rel="stylesheet" />
     {% endblock %}
   </head>
-  <body class="container">
-  {% block body %}{% endblock %}
+  <body>
+    {% block head %}
+    {% endblock head %}
+
+    <div class="container">
+    {% block body %}{% endblock %}
+    </div>
+
   {% block javascripts %}
     <script src="{{ asset('js/jquery-3.3.1.js') }}"></script>
     <script src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
