added Link validation

--- a/templates/lynx/base.html.twig
+++ b/templates/lynx/base.html.twig
@@ -15,7 +15,13 @@
     {% endblock head %}
 
     <div class="container">
-    {% block body %}{% endblock %}
+      
+    {% block messages %}
+    {% endblock messages %}
+    
+    {% block body %}
+    {% endblock body %}
+    
     </div>
 
   {% block javascripts %}
