--- a/templates/lynx/index.html.twig
+++ b/templates/lynx/index.html.twig
@@ -11,9 +11,12 @@
   </div>
 {% endblock head %}
 
-{% block messages %}
+{% block message_ok %}
+{% endblock message_ok %}
+
+{% block message_error %}
   {{ form_errors(form.url) }}
-{% endblock messages %}
+{% endblock message_error %}
 
 {% block body %}  
 
@@ -25,7 +28,7 @@
   </div>
 
   <div class="form-group">
-    <input type="submit" value="Bewaar" class="form-control">
+    <input type="submit" value="Store" class="form-control">
   </div>
 
   {{ form_end(form) }}
