--- a/templates/lynx/index.html.twig
+++ b/templates/lynx/index.html.twig
@@ -12,6 +12,13 @@
 {% endblock head %}
 
 {% block message_ok %}
+  {% if app.session.flashbag.peekall|length > 0 %}
+    <ul>
+      {% for flash_notices in app.flashes('notice') %}
+        <li>{{ flash_notices }}</li>
+        {% endfor %}
+    </ul>
+  {% endif %}
 {% endblock message_ok %}
 
 {% block message_error %}
