stijl van links lijst

--- a/public/css/lynx.css
+++ b/public/css/lynx.css
@@ -33,3 +33,10 @@ and open the template in the editor.
   padding: 8px;
 }
 
+/* links list */
+#all-links ul {
+  li {
+    background-color: yellow;
+  }
+  
+}
