--- a/templates/lynx/index.html.twig
+++ b/templates/lynx/index.html.twig
@@ -24,9 +24,11 @@
     <input type="submit" value="Store" class="form-control">
   </div>
 
-  {{ form_end(form) }}
+  {{ form_end(form) }}    
   
   <div id="all-links">
+    <hr>
+    <h2>List</h2>
     {{ render( controller(
     'App\\Controller\\LynxController::show_links'
       )  ) }}
