--- a/public/css/lynx.css
+++ b/public/css/lynx.css
@@ -1,12 +1,3 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : Dec 7, 2018, 9:04:08 PM
-    Author     : jan
-*/
 
 .message-ok {  
   width: 100%;
@@ -54,3 +45,7 @@ and open the template in the editor.
   background-color: #F5F5F5;  
 }
 
+#all-links ul li span.fa-window-close {
+  cursor: pointer;
+  padding-right: 0;
+}
