--- a/templates/lynx/base.html.twig
+++ b/templates/lynx/base.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}LyNX!{% endblock %}</title>
     {% block stylesheets %}
+      <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
       <link href="{{ asset('bootstrap/css/bootstrap.css') }}" rel="stylesheet" />
       <link href="{{ asset('bootstrap/css/bootstrap-reboot.css') }}" rel="stylesheet" />
       <link href="{{ asset('bootstrap/css/bootstrap-grid.css') }}" rel="stylesheet" />
