--- a/templates/lynx/base.html.twig
+++ b/templates/lynx/base.html.twig
@@ -44,6 +44,7 @@
       <script src="{{ asset('js/jquery-3.3.1.js') }}"></script>
       <script src="{{ asset('bootstrap/js/bootstrap.js') }}"></script>
       <script src="{{ asset('bootstrap/js/bootstrap.bundle.js') }}"></script>
+      <script src="{{ asset('js/lynx.js') }}"></script>
     {% endblock %}
   </body>
 </html>
