fix: fragment -> snippet

--- a/templates/lynx/index.html.twig
+++ b/templates/lynx/index.html.twig
@@ -16,7 +16,7 @@
   {{ form_start( form, {'method': 'POST', 'attr': {'novalidate':'novalidate'} } ) }}
 
   <div class="form-group">
-    <h2>Fragments</h2>
+    <h2>Snippet</h2>
     {{ form_widget(form.url, {'attr': {'class': 'form-control', 'novalidate':''} }) }}
   </div>
 
