start: link tags

--- a/templates/lynx/index.html.twig
+++ b/templates/lynx/index.html.twig
@@ -26,7 +26,7 @@
   
   <div id="all-links" class="bs-glyphicons">
     <hr>
-    <h2>List</h2>
+    <h2>Lijst</h2>
     {{ render( controller(
     'App\\Controller\\LynxController::show_links'
       )  ) }}
