--- a/templates/lynx/all-embedded-links.html.twig
+++ b/templates/lynx/all-embedded-links.html.twig
@@ -4,7 +4,8 @@
   <ul>
     {% for link in links %}
       <li class="row" data-link-id="{{ link.id }}"> 
-        <span class="col-sm-11">{{ link.url }} </span>
+        <span class="col-sm-10">{{ link.url }} </span>
+        <span class="col-sm-1"><a href="#"><button type="button" class="btn btn-secondary">Editeer tags</button></a></span>
         <span class="col-sm-1 fas fa-window-close"></span>
       </li>
     {% endfor %}
