--- a/public/css/lynx.css
+++ b/public/css/lynx.css
@@ -51,3 +51,10 @@
   padding-right: 0;
   font-size: 1.3em;
 }
+
+#all-links .edit-link {  
+  cursor: pointer;
+  border-style: groove;
+  border-color: #e3f2ec;
+  border-radius: 5px;
+}
