--- a/templates/lynx/index.html.twig
+++ b/templates/lynx/index.html.twig
@@ -15,12 +15,12 @@
 
   {{ form_start( form, {'method': 'POST', 'attr': {'novalidate':'novalidate'} } ) }}
   <div class="form-group">
-    <h2>Snippet</h2>
+    <h2>Link</h2>
     {{ form_widget(form.url, {'attr': {'class': 'form-control', 'novalidate':''} }) }}
   </div>
 
   <div class="form-group">
-    <input type="submit" value="Store" class="form-control">
+    <input type="submit" value="Bewaar" class="form-control">
   </div>
   {{ form_end(form) }}
   
